# nipype2pydra

./: .gitignore  README.rst  conftest.py  nipype-interfaces-to-import.yaml  nipype-interfaces.yaml  port_smriprep.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  workflow-graph.dot
.github/workflows/: ci-cd.yml  publish.yml  tests.yml
example-specs/: ants_registration.yml  ants_segmentation.yml  ants_segmentation_param.yml  freesurfer_preprocess.yml  freesurfer_preprocess_param.yml  smriprep.yaml
example-specs/pkg-gen/: mriqc.yaml  nipype.yaml  nipype_ports.yaml  nireports.yaml  niworkflows.yaml  qsiprep.yaml
example-specs/task/: ants_n4_bias_field_correction.yaml  ants_registration.yaml  ants_registration_Registration.yaml  ants_segmentation_N4BiasFieldCorrection.yaml  freesurfer_preprocess_ApplyVolTransform.yaml  fsl_utils_ExtractROI.yaml
example-specs/workflow/: dmriprep.yaml  fmriprep.yaml  qsiprep.yaml  smriprep.yaml
examples-specs/: smriprep.yaml
nipype2pydra/: _version.py  cli.py  exceptions.py  helpers.py  node_factory.py  package.py  task.py  tasks.py  testing.py  utils.py  workflow.py  workflows.py
nipype2pydra/cli/: __init__.py  base.py  convert.py  pkg_gen.py  task.py  wf_spec_gen.py  workflow.py
nipype2pydra/interface/: __init__.py  base.py  function.py  loaders.py  shell_command.py
nipype2pydra/pkg_gen/: __init__.py
nipype2pydra/statements/: __init__.py  assignment.py  imports.py  misc.py  utility.py  workflow.py  workflow_build.py  workflow_components.py
nipype2pydra/task/: __init__.py  base.py  function.py  shell_command.py
nipype2pydra/tests/: test_package.py  test_pkg_gen.py  test_utils.py
nipype2pydra/utils/: __init__.py  imports.py  io.py  misc.py  symbols.py
nipype2pydra/workflow/: __init__.py  base.py  components.py  utility_converters.py
outputs/: just-nodes.txt  smriprep.py
pkg-gen-specs/: fmriprep.yaml  nipype.yaml  nireports.yaml  selected-niworkflows.yaml
required-fileformats/: requirements.txt
required-fileformats/afni/: README.rst  pyproject.toml
required-fileformats/brainsuite/: README.rst  pyproject.toml
required-fileformats/bru2nii/: README.rst  pyproject.toml
required-fileformats/c3/: README.rst  pyproject.toml
required-fileformats/camino/: README.rst  pyproject.toml
required-fileformats/camino2trackvis/: README.rst  pyproject.toml
required-fileformats/cat12/: README.rst  pyproject.toml
required-fileformats/cmtk/: README.rst  pyproject.toml
required-fileformats/dcmstack/: README.rst  pyproject.toml
scripts/: port_interface.py  port_workflow.py
tests/: test_smriprep.py  test_task.py  test_workflow.py
(+2076 files in other folders)
